<resources>

    <string name="app_name">LanChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LanChat</string>
    <string name="myHeadPhoto">请选择头像</string>
	<string name="refresh">刷新</string>
	<string name="friend">好友</string>
	<string name="TV_Zone">空间</string>
	<string name="balloon_send">发送</string>
	<string name="exit">退出</string>
	<string name="reject">拒绝</string>
	<string name="about">关于</string>
	<string name="editPersonalInfo">修改个人信息</string>
	<string name="chooseFile">选择发送的文件</string>
	<string name="userinfo">   用户信息：</string>
	<string name="setting">设置</string>
	<string name="headImg">头  像：</string>
	<string name="name">姓  名：</string>
	<string name="signatrue">签  名：</string>
	<string name="sex">性  别：</string>
	<string name="nickname">昵  称：</string>
	<string name="cancle">取消</string>
	<string name="assure">确定</string>
	<string name="content">
	1.没想好\n2.没想好\n3.没想好\n4.没想好
	</string>  
</resources>