<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main" >
    
    <LinearLayout 
        android:gravity="top"
        android:orientation="horizontal"
    	android:background="@drawable/b2"
        android:layout_width="fill_parent"
        android:layout_height="45dp">
        <ImageView 
            android:id="@+id/MyPhoto"
            android:src="@drawable/png_0022"
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
           />
        <TextView 
            android:id="@+id/cust_title"
            android:gravity="center_horizontal" 
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="28sp" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"/>
        <Button 
            android:id="@+id/refresh"
            android:layout_weight="1"
          	android:padding="2dp"
          	android:text="@string/refresh"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    </LinearLayout>
    
    
        <!-- 中间动态加载View -->
    <LinearLayout
        android:id="@+id/containerBody"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:measureAllChildren="true" 
         >
         <ExpandableListView 
        android:id ="@+id/expandableListView"   
	    android:layout_width ="fill_parent"   
	    android:layout_height ="fill_parent"
	    android:layout_marginTop="4dp"  
	    android:layout_marginBottom="4dp" 
	    
	    	 
        >
     </ExpandableListView>
    </LinearLayout>
    
	<LinearLayout 
       
        android:layout_gravity="bottom" 
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:background="#486a9a" >
        <!-- 功能模块按钮1 -->
        <TextView 
            android:id="@+id/btnModule1" 
            android:layout_marginLeft="7dp" android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" 
            android:layout_weight="1"
            android:textSize="31sp" 
            android:gravity="center_horizontal"
            android:text="@string/friend"
            android:textColor="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <!-- 功能模块按钮2 -->
        <TextView
            
            android:id="@+id/btnModule2" 
            android:text="@string/TV_Zone"
            android:gravity="center_horizontal"
            android:layout_marginLeft="7dp" android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" 
            android:layout_weight="1"
            android:textSize="31sp" 
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
</LinearLayout>
